implemented backend with aws lambda

--- a/website/chat.html
+++ b/website/chat.html
@@ -32,12 +32,12 @@
 <body>
     <h1>Simple Chat Example</h1>
     <h2>Chat with id <span id="chatId"></span> from <span id="username"></span></h2>
-    <button onclick="refreshMessages()">Refresh</button>
+    <button onclick="refreshMessages()">Refresh messages</button>
     <div id="messages"></div>
     <p id="sendMessage">
         Write message:
         <input id="message" type="text">
-        <button onclick="sendMessage()">Start chat</button>
+        <button onclick="sendMessage()">Send message</button>
     </p>
 </body>
 <script src="js/jquery.min.js"></script>
