--- a/website/chats.html
+++ b/website/chats.html
@@ -7,6 +7,7 @@
 <body>
     <h1>Simple Chat Example</h1>
     <h2>List of chats from <span id="username"></span></h2>
+    <button onclick="refreshChats()">Refresh chats</button>
     <ul id="chatList"></ul>
     <h2>Start new chat</h2>
     <p>
